# mas2rocrate

./: .gitignore  README.rst  pyproject.toml
src/mas2rocrate/: __init__.py  cli.py  config.py  convert.py  scrape.py
